# opengl_school_project

./: .gitignore  CMakeLists.txt  README.md
assets/models/container/: container.mtl
assets/models/manticore/: manticore.mtl
cmake/: compiler.cmake  deps_files.cmake  engine_files.cmake  projects.cmake
include/engine/: camera.hpp  input.hpp  light.hpp  mesh.hpp  model.hpp  shader.hpp  texture.hpp  window.hpp
include/engine/geometry/: cube.hpp  geometry.hpp  quad.hpp  sphere.hpp  teapot.hpp
include/glad/: glad.h
libs/Debug/: assimp-windows.lib
libs/Release/: assimp-windows.lib
projects/01_Window/: main.cpp
projects/02_Triangle/: main.cpp
projects/03_Shaders/: fragment.frag  main.cpp  vertex.vert
projects/04_Textures/: fragment.frag  main.cpp  vertex.vert
projects/05_3D/: fragment.frag  main.cpp  main_old.cpp  vertex.vert
projects/06_Camera/: fragment.frag  main.cpp  vertex.vert
projects/07_Phong/: blinn.frag  main.cpp  phong.vert
projects/08_Materials/: blinn.frag  main.cpp  phong.vert
projects/09_LightMaps/: blinn.frag  main.cpp
projects/10_LightDir/: blinn.frag  main.cpp
projects/11_LightPoint/: blinn.frag  light.vert  main.cpp
projects/12_LightSpot/: blinn.frag  main.cpp
projects/13_CustomObjects/: fragment.frag  main.cpp  vertex.vert
projects/14_Stencil/: blinn.frag  light.frag  main.cpp  stencil.frag  stencil.vert
projects/15_NormalMapping/: blinn.frag  light.vert  main.cpp  normal.frag  normal.vert  phong.vert
projects/16_MultipleLights/: blinn.frag  main.cpp
projects/17_CustomObjectWithLighting/: blinnCustomObj.frag  main.cpp  phong.vert  phongCustomObj.vert
projects/18_Exam/: gourad.vert  quick_explanation.txt
projects/18_FrameBuffers/: main.cpp  projection.frag  projection.vert
projects/19_Shadowmaps/: blinn.frag  light.frag  main.cpp  phong.vert  shadow.vert
projects/20_Gourad_Flat_Blinn/: blinn.frag  flat.frag  flat.vert  gourad.frag  main.cpp
src/engine/: camera.cpp  light.cpp  mesh.cpp  model.cpp  shader.cpp  texture.cpp  window.cpp
src/engine/geometry/: cube.cpp  geometry.cpp  quad.cpp  sphere.cpp  teapot.cpp
